Converted sidebar to fixed position; re-seeded and backed up database

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,110 +10,119 @@
 <div class="right_col" role="main">
   <div class="clearfix"></div>
     <div class="row">
+      <div class="column left">
       <!-- start of kWh bar chart -->
-        <div class="col-md-8 col-sm-12 col-xs-12">
-          <div class="x_panel">
-            <div class="x_title">
-              <h2>kWh Produced</h2>
-              <div class="clearfix"></div>
-            </div>
-            <div class="x_content">
-              <canvas id="kWh-bar-chart"></canvas>
-            </div>
+        <div class="x_panel">
+          <div class="x_title">
+            <h2>kWh Produced</h2>
+            <div class="clearfix"></div>
+          </div>
+          <div class="x_content">
+            <canvas id="kWh-bar-chart"></canvas>
           </div>
         </div>
       <!-- end of kWh bar chart -->
 
-      <!-- start of tile stats -->
-        <div class="animated flipInY col-lg-4 col-md-4 col-sm-12 col-xs-12">
-          <div class="tile-stats">
-            <div class="count" style="font-size: 14pt; text-align: center">During this period, your
-            solar panels have reduced carbon emissions by an amount equivalent to:</div>
-          </div>
-        </div>
-        <div class="animated flipInY col-lg-2 col-md-2 col-sm-6 col-xs-6">
-          <div class="tile-stats">
-            <div class="icon"><i class="fas fa-leaf" style="width: 60px; height: 60px; margin-top: 30px"></i></div>
-            <div id="trees-planted" class="count">2</div>
-            <h3>Trees</h3>
-            <h3>Planted</h3>
-          </div>
-        </div>
-        <div class="animated flipInY col-lg-2 col-md-2 col-sm-6 col-xs-6">
-          <div class="tile-stats">
-            <div class="icon"><i class="fas fa-car" style="width: 60px; height: 60px; margin-top: 30px"></i></div>
-            <div id="miles-driven" class="count">102</div>
-            <h3>Miles</h3>
-            <h3>Driven</h3>
-          </div>
-        </div>
-        <div class="animated flipInY col-lg-2 col-md-2 col-sm-6 col-xs-6">
-          <div class="tile-stats">
-            <div class="icon"><object type="image/svg+xml" data="static/images/gas-station.svg" style="width: 60px; height: 60px; margin-top: 0px"></object></div>
-            <div id="gallons-gas" class="count">4</div>
-            <h3>Gallons</h3>
-            <h3>Gas Consumed</h3>
-          </div>
-        </div>
-        <div class="animated flipInY col-lg-2 col-md-2 col-sm-6 col-xs-6">
-          <div class="tile-stats">
-            <div class="icon"><i class="fas fa-fire" style="width: 60px; height: 60px; margin-top: 0px"></i></div>
-            <div id="pounds-coal" class="count">2</div>
-            <h3>Pounds</h3>
-            <h3>Coal Burned</h3>
-          </div>
-        </div>        
-      <!-- end of tile stats -->
-
-      <div class="clearfix"></div>
-    </div>
-
-    <div class="row">
       <!-- start cloudcover chart -->
-        <div class="col-md-8 col-sm-12 col-xs-12">
-          <div class="x_panel">
-            <div class="x_title">
-              <h2>Avg Cloudcover</h2>
-              <ul class="nav navbar-right panel_toolbox">
-              </ul>
-              <div class="clearfix"></div>
-            </div>
-            <div class="x_content">
-              <canvas id="cloud-cover-chart"></canvas>
-            </div>
+        <div class="x_panel">
+          <div class="x_title">
+            <h2>Avg Cloudcover</h2>
+            <ul class="nav navbar-right panel_toolbox">
+            </ul>
+            <div class="clearfix"></div>
+          </div>
+          <div class="x_content">
+            <canvas id="cloud-cover-chart"></canvas>
           </div>
         </div>
       <!-- end cloudcover chart -->
 
-      <!-- start of weather widget -->
-      <div class="col-md-4 col-sm-6 col-xs-12">
+      <!-- start solar arc graph -->
         <div class="x_panel">
           <div class="x_title">
-            <h2>Weather</h2>
+            <h2>Solar Path</h2>
+            <ul class="nav navbar-right panel_toolbox">
+            </ul>
             <div class="clearfix"></div>
           </div>
           <div class="x_content">
-            <div class="row">
-              <div class="col-sm-12">
-                <div id="main-weather-day" class="temperature">Monday</div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-4">
-                <div class="weather-icon">
-                  <br><span>
-                                      <canvas height="90" width="90" id="main-weather-icon"></canvas>
-                                  </span>
+            <canvas id="solar-arc-graph"></canvas>
+          </div>
+        </div>
+      <!-- end solar arc graph -->
+    </div>
 
-                </div>
-              </div>
-              <div class="col-sm-8">
-                <div class="weather-text">
-                  <br><h3>Oakland</h3>
-                  <h4 id="main-day-weather"><i>Partly Cloudy Day</i></h4>                      
-                </div>
+    <div class="column right">
+    <!-- start of tile stats -->
+      <div class="animated flipInY col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="tile-stats">
+          <div class="count" style="font-size: 14pt; text-align: center">During this period, your
+          solar panels have reduced carbon emissions by an amount equivalent to:</div>
+        </div>
+      </div>
+      <div class="animated flipInY col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="tile-stats">
+          <div class="icon"><i class="fas fa-leaf" style="width: 60px; height: 60px; margin-top: 30px"></i></div>
+          <div id="trees-planted" class="count">2</div>
+          <h3>Trees</h3>
+          <h3>Planted</h3>
+        </div>
+      </div>
+      <div class="animated flipInY col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="tile-stats">
+          <div class="icon"><i class="fas fa-car" style="width: 60px; height: 60px; margin-top: 30px"></i></div>
+          <div id="miles-driven" class="count">102</div>
+          <h3>Miles</h3>
+          <h3>Driven</h3>
+        </div>
+      </div>
+      <div class="animated flipInY col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="tile-stats">
+          <div class="icon"><object type="image/svg+xml" data="static/images/gas-station.svg" style="width: 60px; height: 60px; margin-top: 0px"></object></div>
+          <div id="gallons-gas" class="count">4</div>
+          <h3>Gallons</h3>
+          <h3>Gas Consumed</h3>
+        </div>
+      </div>
+      <div class="animated flipInY col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="tile-stats">
+          <div class="icon"><i class="fas fa-fire" style="width: 60px; height: 60px; margin-top: 0px"></i></div>
+          <div id="pounds-coal" class="count">2</div>
+          <h3>Pounds</h3>
+          <h3>Coal Burned</h3>
+        </div>
+      </div>        
+    <!-- end of tile stats -->
+
+    <!-- start of weather widget -->
+      <div class="x_panel">
+        <div class="x_title">
+          <h2>Weather</h2>
+          <div class="clearfix"></div>
+        </div>
+        <div class="x_content">
+          <div class="row">
+            <div class="col-sm-12">
+              <div id="main-weather-day" class="temperature">Monday</div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="weather-icon">
+                <br><span>
+                                    <canvas height="90" width="90" id="main-weather-icon"></canvas>
+                                </span>
+
               </div>
             </div>
+            <div class="col-sm-8">
+              <div class="weather-text">
+                <br><h3>Oakland</h3>
+                <h4 id="main-day-weather"><i>Partly Cloudy Day</i></h4>                      
+              </div>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-sm-12">
               <div class="weather-text pull-right" style="text-align: right">
                 <h3 id="main-day-temp" style="margin-top: 0px; margin-bottom: 5px">23&#176;</h3>
@@ -121,128 +130,104 @@
                 <h4 id="main-day-cloudcover" style="color: #73879C; margin-top: 0px; margin-bottom: 10px">21&#37;</h4>
               </div>
             </div>
-            <div class="clearfix"></div>
-
-
-            <div class="row weather-days">
-              <div class="col-sm-2">
-                <div class="daily-weather">
-                  <h2 id="weather-day1" class="day">Mon</h2>
-                  <h3 id="day1-high" class="degrees">25</h3>
-                  <span>
-                  <canvas id="icon-day1" width="32" height="32">
-                                          </canvas>
-
-                                  </span>
-                  <h5 id="clcov-day1" style="margin-bottom: 0px">15</h5>
-                                      <h5 style="margin-top: 0px"><i>ClCov</i></h5>
-                                  
-                </div>
+          </div>
+          <div class="clearfix"></div>
+          <div class="row weather-days">
+            <div class="col-sm-2">
+              <div class="daily-weather">
+                <h2 id="weather-day1" class="day">Mon</h2>
+                <h3 id="day1-high" class="degrees">25</h3>
+                <span>
+                <canvas id="icon-day1" width="32" height="32">
+                                        </canvas>
+                                </span>
+                <h5 id="clcov-day1" style="margin-bottom: 0px">15</h5>
+                                    <h5 style="margin-top: 0px"><i>ClCov</i></h5>
+                                
               </div>
-              <div class="col-sm-2">
-                <div class="daily-weather">
-                  <h2 id="weather-day2" class="day">Tue</h2>
-                  <h3 id="day2-high" class="degrees">25</h3>
-                  <canvas id="icon-day2" height="32" width="32"></canvas>
-                  <h5 id="clcov-day2" style="margin-bottom: 0px">12</h5>
-                                      <h5 style="margin-top: 0px"><i>ClCov</i></h5>
-                </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="daily-weather">
+                <h2 id="weather-day2" class="day">Tue</h2>
+                <h3 id="day2-high" class="degrees">25</h3>
+                <canvas id="icon-day2" height="32" width="32"></canvas>
+                <h5 id="clcov-day2" style="margin-bottom: 0px">12</h5>
+                                    <h5 style="margin-top: 0px"><i>ClCov</i></h5>
               </div>
-              <div class="col-sm-2">
-                <div class="daily-weather">
-                  <h2 id="weather-day3" class="day">Wed</h2>
-                  <h3 id="day3-high" class="degrees">27</h3>
-                  <canvas id="icon-day3" height="32" width="32"></canvas>
-                  <h5 id="clcov-day3" style="margin-bottom: 0px">14</h5>
-                                      <h5 style="margin-top: 0px"><i>ClCov</i></h5>
-                </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="daily-weather">
+                <h2 id="weather-day3" class="day">Wed</h2>
+                <h3 id="day3-high" class="degrees">27</h3>
+                <canvas id="icon-day3" height="32" width="32"></canvas>
+                <h5 id="clcov-day3" style="margin-bottom: 0px">14</h5>
+                                    <h5 style="margin-top: 0px"><i>ClCov</i></h5>
               </div>
-              <div class="col-sm-2">
-                <div class="daily-weather">
-                  <h2 id="weather-day4" class="day">Thu</h2>
-                  <h3 id="day4-high" class="degrees">28</h3>
-                  <canvas id="icon-day4" height="32" width="32"></canvas>
-                  <h5 id="clcov-day4" style="margin-bottom: 0px">15</h5>
-                                      <h5 style="margin-top: 0px"><i>ClCov</i></h5>
-                </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="daily-weather">
+                <h2 id="weather-day4" class="day">Thu</h2>
+                <h3 id="day4-high" class="degrees">28</h3>
+                <canvas id="icon-day4" height="32" width="32"></canvas>
+                <h5 id="clcov-day4" style="margin-bottom: 0px">15</h5>
+                                    <h5 style="margin-top: 0px"><i>ClCov</i></h5>
               </div>
-              <div class="col-sm-2">
-                <div class="daily-weather">
-                  <h2 id="weather-day5" class="day">Fri</h2>
-                  <h3 id="day5-high" class="degrees">28</h3>
-                  <canvas id="icon-day5" height="32" width="32"></canvas>
-                  <h5 id="clcov-day5" style="margin-bottom: 0px">11</h5>
-                                      <h5 style="margin-top: 0px"><i>ClCov</i></h5>
-                </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="daily-weather">
+                <h2 id="weather-day5" class="day">Fri</h2>
+                <h3 id="day5-high" class="degrees">28</h3>
+                <canvas id="icon-day5" height="32" width="32"></canvas>
+                <h5 id="clcov-day5" style="margin-bottom: 0px">11</h5>
+                                    <h5 style="margin-top: 0px"><i>ClCov</i></h5>
               </div>
-              <div class="col-sm-2">
-                <div class="daily-weather">
-                  <h2 id="weather-day6" class="day">Sat</h2>
-                  <h3 id="day6-high" class="degrees">26</h3>
-                  <canvas id="icon-day6" height="32" width="32"></canvas>
-                  <h5 id="clcov-day6" style="margin-bottom: 0px">10</h5>
-                                      <h5 style="margin-top: 0px"><i>ClCov</i></h5>
-                </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="daily-weather">
+                <h2 id="weather-day6" class="day">Sat</h2>
+                <h3 id="day6-high" class="degrees">26</h3>
+                <canvas id="icon-day6" height="32" width="32"></canvas>
+                <h5 id="clcov-day6" style="margin-bottom: 0px">10</h5>
+                                    <h5 style="margin-top: 0px"><i>ClCov</i></h5>
               </div>
-              <div class="clearfix"></div>
             </div>
           </div>
         </div>
       </div>
-      <!-- end of weather widget -->
-    </div>
+    <!-- end of weather widget -->
 
-    <div class="row">
-      <!-- start solar arc graph -->
-        <div class="col-md-8 col-sm-12 col-xs-12">
-          <div class="x_panel">
-            <div class="x_title">
-              <h2>Solar Elevation</h2>
-              <ul class="nav navbar-right panel_toolbox">
-              </ul>
-              <div class="clearfix"></div>
-            </div>
-            <div class="x_content">
-              <canvas id="solar-arc-graph"></canvas>
-            </div>
-          </div>
+    <!-- beginning sunstats gauge -->
+      <div class="x_panel">
+        <div class="x_title">
+          <h2 id="sun-gauge-title">Daylight/Zenith Today</h2>
+          <ul class="nav navbar-right panel_toolbox">
+          </ul>
+          <div class="clearfix"></div>
         </div>
-      <!-- end solar arc graph -->
-
-      <!-- beginning sunstats gauge -->
-      <div class="col-md-4 col-sm-12 col-xs-12 pull-right">
-        <div class="x_panel">
-          <div class="x_title">
-            <h2 id="sun-gauge-title">Daylight/Zenith Today</h2>
-            <ul class="nav navbar-right panel_toolbox">
+        <div class="x_content">
+          <div class="dashboard-widget-content">
+            <ul class="quick-list" style="font-size: 12pt">
+              <li>Sunrise: <span id="sunrise"></span></li>
+              <li>Sunset: <span id="sunset"></span></li>
+              <li>Number of hours<br>
+              daylight: <span id="daylight"></span> </li>
+              <li>Time at solar<br>
+              zenith: <span id="solar-noon"></span></li>
+              <li id="solar-zenith-toggle">Solar zenith: <span id="zenith"></span></li>
             </ul>
-            <div class="clearfix"></div>
-          </div>
-          <div class="x_content">
-            <div class="dashboard-widget-content">
-              <ul class="quick-list" style="font-size: 12pt">
-                <li>Sunrise: <span id="sunrise"></span></li>
-                <li>Sunset: <span id="sunset"></span></li>
-                <li>Number of hours<br>
-                daylight: <span id="daylight"></span> </li>
-                <li>Time at solar<br>
-                zenith: <span id="solar-noon"></span></li>
-                <li id="solar-zenith-toggle">Solar zenith: <span id="zenith"></span></li>
-              </ul>
-
-              <div class="sidebar-widget">
-                <h4 id="gauge-description">Solar Elevation (Now)</h4>
-                <h5 class="pull-left" style="margin-left: 20px"><i>Degrees above/below horizon</i></h5>
-                <canvas id="sun-gauge"></canvas>
-              </div>
+            <div class="sidebar-widget" style="margin-top: 0px">
+              <h4 id="gauge-description">Solar Elevation (Now)</h4>
+              <h5 class="pull-left" style="margin-left: 20px"><i>Degrees above/below horizon</i></h5>
+              <canvas id="sun-gauge"></canvas>
             </div>
           </div>
         </div>
       </div>
-      <!-- end sunstats gauge -->
+    <!-- end sunstats gauge -->
+     </div>
     </div>
-
-
+  </div>
+</div>
 
 {% endblock content %}
 
