--- a/templates/site_template/top_navigation.html
+++ b/templates/site_template/top_navigation.html
@@ -1,9 +1,7 @@
-<div class="nav_menu" >
+<div class="nav_menu" style="height: 60px">
   <nav>
-    <div class="nav toggle">
-      <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-    </div>
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right" style="font-size: 16px; margin-top: 20px; margin-right: 50px;">
+    	<li>Welcome, Laura</li>
     </ul>
   </nav>
 </div>
