--- a/templates/site_template/sidebar.html
+++ b/templates/site_template/sidebar.html
@@ -1,4 +1,4 @@
-<div class="left_col scroll-view">
+<div class="left_col">
   <div class="navbar nav_title" style="border: 0;">
     <a href="" class="site_title"><i class="fas fa-sun"></i> <span>My Sunstats</span></a>
   </div>
